    distribution. However, in the presence of boundary 0/1 observations, there
    is now support for two alternatives: "cbeta4" = censored constrained
    four-parameter beta distribution which requires specification of a fixed
    "nu" parameter. "cbetax" = censored exponential mixture beta distribution
    which allows for estimation of "nu".


Changes in Version 3.1-0

  o The betatree() function now uses the new mob() implementation from the
    "partykit" package (instead of the old "party" package). The user interface
    essentially remained the same but now many more options are available through
    the new mob() function. The returned model object is now inheriting from
    "modelparty"/"party".

  o Included "grDevices" in Imports.
  
  o Fixed model.frame() method for "betareg" objects which do not store the
    model frame in $model.

  o betamix() gained arguments "weights" (case weights for observations) and
    "offset" (for the mean linear predictor).


Changes in Version 3.0-5

  o The "Formula" package is now only in Imports but not Depends (see below).

  o Method "FLXgetModelmatrix" for "FLXMRbeta" objects modified due to
    changes in flexmix 2.3.12. 


Changes in Version 3.0-4

  o For some datasets betareg() would just "hang" because dbeta() "hangs"
    for certain extreme parameter combinations (in current R versions).
    betareg() now tries to catches these cases in order to avoid the problem.
    
  o Depends/Imports/Suggests have been rearranged to conform with current
    CRAN check policies. This is the last version of "betareg" to have the
    "Formula" package in Depends - from the next version onwards it will
    only be in Imports.


Changes in Version 3.0-3

  o The predict() method gained support for type = "quantile", so that
    quantiles of the response distribution can be predicted.

  o The "Formula" package is now not only in the list of dependencies
    but is also imported in the NAMESPACE, in order to facilitate